[gd_scene load_steps=12 format=2]

[ext_resource path="res://scenes/language_screen.gd" type="Script" id=1]
[ext_resource path="res://textures/backgrounds/background_mm.png" type="Texture" id=2]
[ext_resource path="res://textures/backgrounds/grass_mm.png" type="Texture" id=3]
[ext_resource path="res://fonts/pixelfont_dynamicfont.tres" type="DynamicFont" id=4]
[ext_resource path="res://textures/main_menu_cursor.png" type="Texture" id=5]
[ext_resource path="res://textures/black8x8.png" type="Texture" id=6]
[ext_resource path="res://sound/music/intro.ogg" type="AudioStream" id=7]
[ext_resource path="res://sound/music/main.ogg" type="AudioStream" id=8]

[sub_resource type="Animation" id=1]
resource_name = "blink"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=3]
resource_name = "hide"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("black8x8:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "finish"
} ]
}

[sub_resource type="Animation" id=2]
resource_name = "show"
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath("black8x8:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.0592621, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("titles:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -49 ), Vector2( 0, -49 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("menu:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 157, 0 ), Vector2( 157, 0 ), Vector2( 0, 0 ) ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 1.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "run"
} ]
}

[node name="language_screen" type="Node2D"]
script = ExtResource( 1 )

[node name="background_mm" type="Sprite" parent="."]
position = Vector2( 160, 90 )
texture = ExtResource( 2 )

[node name="grass_mm" type="Sprite" parent="background_mm"]
position = Vector2( 0, 75 )
texture = ExtResource( 3 )

[node name="titles" type="Node2D" parent="."]

[node name="Label" type="Label" parent="titles"]
margin_left = 112.0
margin_top = 27.0
margin_right = 216.0
margin_bottom = 41.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Выберите язык"

[node name="Label2" type="Label" parent="titles"]
margin_left = 85.0
margin_top = 39.0
margin_right = 245.0
margin_bottom = 53.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Choose your language"

[node name="menu" type="Node2D" parent="."]

[node name="lang_ru" type="Label" parent="menu"]
margin_left = 166.0
margin_top = 82.0
margin_right = 270.0
margin_bottom = 96.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Русский"

[node name="lang_en" type="Label" parent="menu"]
margin_left = 166.0
margin_top = 97.0
margin_right = 270.0
margin_bottom = 107.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "English"

[node name="main_menu_cursor" type="Sprite" parent="."]
visible = false
position = Vector2( 151, 82 )
texture = ExtResource( 5 )
centered = false
hframes = 2

[node name="cursor_anim" type="AnimationPlayer" parent="main_menu_cursor"]
autoplay = "blink"
anims/blink = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "show"
anims/hide = SubResource( 3 )
anims/show = SubResource( 2 )

[node name="black8x8" type="Sprite" parent="."]
position = Vector2( 160, 90 )
z_index = 2
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 0, 0, 320, 180 )

[node name="intro_music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
autoplay = true

[node name="main_music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[connection signal="finished" from="intro_music" to="main_music" method="play"]
